Add canonical link and update heading in index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-RealityHackingProject - Soon to be online
+<link rel="canonical" href="https://realityhackingproject.com/">
+
+
+<font size=24>RealityHackingProject - Soon to be online</font>
+</html>
