Add head section with canonical link to index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<link rel="canonical" href="https://realityhackingproject.com/">
-
+<head>
+  <link rel="canonical" href="https://realityhackingproject.com/">
+</head>
 
 <font size=24>RealityHackingProject - Soon to be online</font>
 </html>
