Revamp index.html for better SEO and structure
Added meta tags for SEO and improved document structure.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<head>
-  <link rel="canonical" href="https://realityhackingproject.com/">
-</head>
-
-<font size=24>RealityHackingProject - Soon to be online</font>
-</html>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Reality Hacking — Series</title>
+<link rel="canonical" href="https://realityhackingproject.com/">
+<meta name="description" content="Reality Hacking™ — books, worksheets, and tools for human + AI alignment.">
+<meta property="og:title" content="Reality Hacking">
+<meta property="og:description" content="Books, worksheets, and tools for human + AI alignment.">
+<meta property="og:url" content="https://realityhackingproject.com/">
+</head><body>
+<h1>Reality Hacking™</h1>
+<p>Books, worksheets, and tools for human + AI alignment.</p>
+<p><a href="/series">Series</a> • <a href="/press">Press</a> • <a href="/verify">Verify</a></p>
+<footer><small>Reality Hacking™ is a trademark of Reality Hacking Project LLC. © 2025 Author X. All rights reserved.</small></footer>
+</body></html>
