--- a/index.html
+++ b/index.html
@@ -1,14 +1,70 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Reality Hacking — Series</title>
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Reality Hacking — Books, Worksheets, Tools</title>
 <link rel="canonical" href="https://realityhackingproject.com/">
-<meta name="description" content="Reality Hacking™ — books, worksheets, and tools for human + AI alignment.">
+<meta name="description" content="Reality Hacking™ — a series of books, worksheets, and tools for human + AI alignment and governance.">
 <meta property="og:title" content="Reality Hacking">
-<meta property="og:description" content="Books, worksheets, and tools for human + AI alignment.">
+<meta property="og:description" content="Books, worksheets, and tools for human + AI alignment and governance.">
 <meta property="og:url" content="https://realityhackingproject.com/">
-</head><body>
-<h1>Reality Hacking™</h1>
-<p>Books, worksheets, and tools for human + AI alignment.</p>
-<p><a href="/series">Series</a> • <a href="/press">Press</a> • <a href="/verify">Verify</a></p>
-<footer><small>Reality Hacking™ is a trademark of Reality Hacking Project LLC. © 2025 Author X. All rights reserved.</small></footer>
-</body></html>
+<meta property="og:image" content="/assets/og-image.jpg">
+<link rel="icon" href="/assets/logo.svg">
+<link rel="preload" href="/styles.css" as="style"><link rel="stylesheet" href="/styles.css">
+</head>
+<body>
+  <div class="container">
+    <div class="nav">
+      <div class="brand"><img src="/assets/logo.svg" alt="" height="28" width="28"><strong>Reality Hacking™</strong></div>
+      <nav>
+        <a class="active" href="/">Home</a>
+        <a href="/series">Series</a>
+        <a href="/press">Press</a>
+        <a href="/verify">Verify</a>
+      </nav>
+    </div>
+
+    <section class="hero">
+      <span class="badge">Abeyance > Speed • Consent > Assumption • Negentropy > Noise</span>
+      <h1>Books, worksheets, and tools for <em>human + AI alignment</em>.</h1>
+      <p class="subtitle">A practical series for governance, culture, and everyday skills in the age of automation.</p>
+      <div class="cta">
+        <a class="button primary" href="/series">Explore Series</a>
+        <a class="button" href="mailto:hello@realityhackingproject.com">Get updates</a>
+      </div>
+      <div class="grid">
+        <div class="card">
+          <span class="kicker">Vol. 1</span>
+          <h3>Prompt Writing for the Age of AI</h3>
+          <p>Tactical patterns, safety rails, and Zx3 reasoning you can actually use.</p>
+        </div>
+        <div class="card">
+          <span class="kicker">Vol. 2</span>
+          <h3>Life Skills Around AI</h3>
+          <p>Consent-first collaboration, de-escalation, and resilient workflows.</p>
+        </div>
+        <div class="card">
+          <span class="kicker">Tools</span>
+          <h3>Worksheets & Checklists</h3>
+          <p>Downloadables + provenance so teams can adopt best practices quickly.</p>
+        </div>
+      </div>
+    </section>
+
+    <section style="margin-top:18px">
+      <h2 style="margin:0 0 6px 0;font-size:20px;">Roadmap (public)</h2>
+      <div class="screen">
+        - Site live (you are here) ✓
+        - Vol. 1 sample chapter → upcoming
+        - Worksheets (v1) → upcoming
+        - Governance one-pager + metrics → published soon
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div>Reality Hacking™ is a trademark of Reality Hacking Project LLC.</div>
+      <div>© 2025 Author X. All rights reserved.</div>
+    </footer>
+  </div>
+</body>
+</html>
