--- a/press/index.html
+++ b/press/index.html
@@ -2,7 +2,20 @@
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Press Kit — Reality Hacking</title>
 <link rel="canonical" href="https://realityhackingproject.com/press">
-</head><body>
-<h1>Press Kit</h1>
-<p>One-paragraph bio, project description, and contact: <a href="mailto:press@realityhackingproject.com">press@realityhackingproject.com</a></p>
-</body></html>
+<link rel="stylesheet" href="/styles.css">
+</head><body><div class="container">
+<div class="nav"><div class="brand"><img src="/assets/logo.svg" alt="" height="28" width="28"><strong>Reality Hacking™</strong></div>
+<nav><a href="/">Home</a><a href="/series">Series</a><a class="active" href="/press">Press</a><a href="/verify">Verify</a></nav></div>
+
+<section class="hero">
+  <h1>Press Kit</h1>
+  <p class="subtitle">One-paragraph description, short bio, contact.</p>
+  <div class="grid">
+    <div class="card"><h3>Project</h3><p>Reality Hacking™ is a book series and toolkit for ethical human+AI collaboration.</p></div>
+    <div class="card"><h3>Bio</h3><p>Author X is a systems designer focused on alignment, governance, and humane tools.</p></div>
+    <div class="card"><h3>Contact</h3><p>Email: <a href="mailto:press@realityhackingproject.com">press@realityhackingproject.com</a></p></div>
+  </div>
+</section>
+
+<footer class="footer"><div>Reality Hacking™ is a trademark of Reality Hacking Project LLC.</div><div>© 2025 Author X. All rights reserved.</div></footer>
+</div></body></html>
