--- a/series/index.html
+++ b/series/index.html
@@ -2,11 +2,38 @@
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Reality Hacking — Series</title>
 <link rel="canonical" href="https://realityhackingproject.com/series">
-</head><body>
-<h1>Reality Hacking™ — Series</h1>
-<ol>
-  <li><strong>Vol. 1:</strong> Prompt Writing for the Age of AI — <em>coming soon</em></li>
-  <li><strong>Vol. 2:</strong> Life Skills Around AI — <em>in development</em></li>
-</ol>
-<p>Sign up for updates: <a href="mailto:hello@realityhackingproject.com">hello@realityhackingproject.com</a></p>
-</body></html>
+<link rel="stylesheet" href="/styles.css">
+</head><body><div class="container">
+<div class="nav"><div class="brand"><img src="/assets/logo.svg" alt="" height="28" width="28"><strong>Reality Hacking™</strong></div>
+<nav><a href="/">Home</a><a class="active" href="/series">Series</a><a href="/press">Press</a><a href="/verify">Verify</a></nav></div>
+
+<section class="hero">
+  <h1>Reality Hacking™ — The Series</h1>
+  <p class="subtitle">Clarity without hype. Tools without coercion.</p>
+  <div class="grid">
+    <div class="card">
+      <span class="kicker">Volume 1 — in progress</span>
+      <h3>Prompt Writing for the Age of AI</h3>
+      <p>Design prompts that respect consent, reduce noise, and keep safety intact.</p>
+    </div>
+    <div class="card">
+      <span class="kicker">Volume 2 — drafting</span>
+      <h3>Life Skills Around AI</h3>
+      <p>Day-to-day practices for responsibly integrating automation.</p>
+    </div>
+    <div class="card">
+      <span class="kicker">Companions</span>
+      <h3>Worksheets & Checklists</h3>
+      <p>Field-tested templates for teams and classrooms (with provenance).</p>
+    </div>
+  </div>
+  <div class="cta" style="margin-top:10px">
+    <a class="button primary" href="mailto:hello@realityhackingproject.com">Request sample chapter (email)</a>
+  </div>
+</section>
+
+<footer class="footer">
+  <div>Reality Hacking™ is a trademark of Reality Hacking Project LLC.</div>
+  <div>© 2025 Author X. All rights reserved.</div>
+</footer>
+</div></body></html>
