--- a/verify/index.html
+++ b/verify/index.html
@@ -2,15 +2,24 @@
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Verify — Reality Hacking</title>
 <link rel="canonical" href="https://realityhackingproject.com/verify">
-</head><body>
-<h1>Verify Downloads</h1>
-<p>Compare SHA-256 checksums:</p>
-<pre>
-# example
+<link rel="stylesheet" href="/styles.css">
+</head><body><div class="container">
+<div class="nav"><div class="brand"><img src="/assets/logo.svg" alt="" height="28" width="28"><strong>Reality Hacking™</strong></div>
+<nav><a href="/">Home</a><a href="/series">Series</a><a href="/press">Press</a><a class="active" href="/verify">Verify</a></nav></div>
+
+<section class="hero">
+  <h1>Verify Downloads</h1>
+  <p class="subtitle">Compare the SHA-256 checksums below with your files.</p>
+  <div class="card">
+    <pre class="screen">
 File: RH_Vol1_Sample.pdf
 SHA256: (paste here)
 
 File: Worksheets_v1.zip
 SHA256: (paste here)
-</pre>
-</body></html>
+    </pre>
+  </div>
+</section>
+
+<footer class="footer"><div>Reality Hacking™ is a trademark of Reality Hacking Project LLC.</div><div>© 2025 Author X. All rights reserved.</div></footer>
+</div></body></html>
